--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs-extra": "^11.1.0",
     "klaw": "^4.0.1",
     "luxon": "^3.1.1",
+    "node-dijkstra": "^2.5.0",
     "nodemon": "^2.0.20"
   }
 }
