--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "klaw": "^4.0.1",
     "luxon": "^3.1.1",
     "node-dijkstra": "^2.5.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "simple-statistics": "^7.8.0",
+    "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.15.8"
   }
 }
